# SimpleConvert

./: .gitignore  SimpleConvert.pro  meson.build  readme.md  resources.qrc  setup.py
.flatpak-builder/checksums/: org.gnome.Simpleconvert.json
buld/: .ninja_deps  .ninja_log  build.ninja
buld/data/: net.bartkessels.simpleconvert.appdata.xml
buld/meson-logs/: install-log.txt  meson-log.txt
buld/src/: simpleconvert  (+1 more)
data/: meson.build  net.bartkessels.simpleconvert.appdata.xml  net.bartkessels.simpleconvert.appdata.xml.in  net.bartkessels.simpleconvert.desktop  net.bartkessels.simpleconvert.desktop.in  net.bartkessels.simpleconvert.gschema.xml
po/: POTFILES  POTFILES.in  meson.build  nl.po
simpleconvert/: ListBoxItem.py  SimpleconvertWindow.py  __main__.py  listboxitem.py  main.py  meson.build  simpleconvertwindow.py
src/: SimpleconvertWindow.py  conversioncontroller.cpp  conversioncontroller.h  listitemfile.h  main.c  main.cpp  mainwindow.cpp  mainwindow.h  meson.build  preferences.cpp  preferences.h  preferencesdialog.cpp  preferencesdialog.h  simpleconvert-app.h  simpleconvert-application.c  simpleconvert-application.h  simpleconvert-dialog-about.c  simpleconvert-dialog-about.h  simpleconvert-dialog-settings.c  simpleconvert-dialog-settings.h  simpleconvert-messages.h  simpleconvert-notification.c  simpleconvert-notification.h  simpleconvert-settings.c  simpleconvert-settings.h  simpleconvert-widget-listboxitem.c  simpleconvert-widget-listboxitem.h  simpleconvert-window-main.c  simpleconvert-window-main.h  simpleconvert-window-shortcuts.c  simpleconvert-window-shortcuts.h  simpleconvert.gresource.xml  simpleconvert.in
src/ui/: dialog_about.glade  dialog_settings.glade  mainwindow.ui  menu_app.glade  preferencesdialog.ui  window.glade  window_main.glade  window_main.glade~  window_shortcuts.glade
translations/: simpleconvert_nl.ts
(+23 files in other folders)
